<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright 2014-2015. Adaptive.me.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>me.adaptive.dashbar</groupId>
    <artifactId>dashbar-parent</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>adaptive-api-service</module>
        <module>adaptive-infrastructure</module>
        <module>adaptive-assembly-war</module>
        <module>adaptive-che-plugin</module>
        <module>adaptive-infra-client</module>
    </modules>
    <properties>
        <dashbar.version>1.0-SNAPSHOT</dashbar.version>
        <che.version>3.10.0</che.version>
        <che.core.version>3.10.0-adaptive</che.core.version>
        <spring.version>4.2.0.RELEASE</spring.version>
        <org.everrest.version>1.4.0</org.everrest.version>
        <java.web.api>6.0</java.web.api>
        <org.apache.tomcat.version>7.0.54</org.apache.tomcat.version>
        <adaptive.services.compoments.version>1.0-SNAPSHOT</adaptive.services.compoments.version>
    </properties>
    <repositories>
        <repository>
            <id>spring-maven-release</id>
            <name>Spring Maven Release Repository</name>
            <url>http://maven.springframework.org/release</url>
        </repository>
        <repository>
            <id>codenvy-public-repo</id>
            <name>codenvy public</name>
            <url>https://maven.codenvycorp.com/content/groups/public/</url>
        </repository>
        <repository>
            <id>codenvy-public-snapshots-repo</id>
            <name>codenvy public snapshots</name>
            <url>https://maven.codenvycorp.com/content/repositories/codenvy-public-snapshots/</url>
        </repository>
    </repositories>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.3</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>